# ocaml-spikes

./: README.md
cpp-bind/: .gitignore  dune  test.ml
cpp-bind/src/: CMakeLists.txt
embed/: .gitignore  Makefile  dune  test.c  test1.ml  test2.ml  test_embed.ml
embed-sdl/: Makefile  dune  test_embed.ml
lang/: example.ml  test.ml
sig_wo_struct/exe/: dune  exe.ml
sig_wo_struct/impl/: types.ml
sig_wo_struct/lib/: dune  lib.ml  types.mli
